--- a/view/src/App.css
+++ b/view/src/App.css
@@ -14,12 +14,12 @@
 }
 
 .App-header {
-  min-height: 100vh;
+  min-height: 500px;
   display: flex;
   flex-direction: column;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
+  font-size: 22px;
 }
 
 .App-link {
