Divided fullname into firstname and lastname, added some css

--- a/view/src/App.css
+++ b/view/src/App.css
@@ -1,39 +1,30 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-float infinite 3s ease-in-out;
-  }
-}
-
-.App-header {
-  min-height: 500px;
+header {
+  width: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: 22px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  border-bottom: 1px solid black;
+  min-height: 62px;
 }
 
-.App-link {
-  color: rgb(112, 76, 182);
+nav {
+  height: 60px;
+}
+nav ul {
+  margin: 0;
+}
+nav li {
+  display: inline-block;
+  padding: 16px;
+  border: 1px solid black;
 }
 
-@keyframes App-logo-float {
-  0% {
-    transform: translateY(0);
-  }
-  50% {
-    transform: translateY(10px);
-  }
-  100% {
-    transform: translateY(0px);
-  }
+li a {
+  font-size: 1.5em;
+}
+header h1 {
+  margin: 0;
+  padding-top: 10px;
 }
