--- a/view/src/index.css
+++ b/view/src/index.css
@@ -6,6 +6,7 @@ li {
 
 body {
   margin: 0;
+  text-align: center;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -24,4 +25,9 @@ code {
 a {
   text-decoration: none;
   color: black;
+}
+
+.inputs input {
+  display: block;
+  margin: 0 auto;
 }
