--- a/client/src/features/cart/cart.css
+++ b/client/src/features/cart/cart.css
@@ -28,9 +28,34 @@ a :hover {
 
 .total {
     display: inline-block;
+    margin: 10px;
 }
 
+.items {
+    display: inline-block;
+    margin: 10px;
+}
 .cart-submit {
     margin: 10px;
     
+}
+
+.cart-footer {
+    position: fixed;
+    bottom: 0px;
+    z-index: 10;
+    width: 100%;
+    height: 40px;
+    background: #ADA996;  /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    border-top: 1px solid black;
+}
+
+.checkout-container {
+    display: inline-block;
+}
+
+.empty-msg {
+    margin: 10px;
 }
