--- a/client/src/features/orders/orders.css
+++ b/client/src/features/orders/orders.css
@@ -1,24 +1,24 @@
-.cart-container {
+.list-container {
     max-width: 1200px;
     margin: 0 auto;
 }
 
-.cart-item {
+.list-item {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr 1fr;
     text-align: left;
     align-items: center;
 }
 
-.cart-name {
+.list-main {
     grid-column: 1 / 3;
 }
 
-.cart-qty {
+.list-1 {
     grid-column: 3 / 4;
 }
 
-.cart-price {
+.list-2 {
     grid-column: 4 / 5;
 }
 
