--- a/client/src/features/users/user.css
+++ b/client/src/features/users/user.css
@@ -51,3 +51,7 @@
   
   /* Change the background color of the dropdown button when the dropdown content is shown */
   .dropdown:hover .dropbtn {background-color: #3e8e41;}
+
+  .password {
+    margin: 10px;
+  }
