--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,9 +1,3 @@
-@import-normalize;
-
-li {
-  list-style-type: none;
-}
-
 body {
   margin: 0;
   text-align: center;
@@ -12,9 +6,8 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: #ADA996;  /* fallback for old browsers */
-  background: -webkit-linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(to right, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: rgb(9,105,121);
+background: linear-gradient(90deg, rgba(9,105,121,1) 35%, rgba(0,212,255,1) 100%);
 }
 
 code {
@@ -27,8 +20,10 @@ a {
   color: black;
 }
 
-.inputs input {
-  display: block;
-  margin: 0 auto;
+a:hover {
+  color:black;
 }
 
+ul {
+  list-style-type: none;
+}
