--- a/client/src/features/cart/cart.css
+++ b/client/src/features/cart/cart.css
@@ -5,21 +5,21 @@
 
 .cart-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 66px 1fr 1fr 1fr 1fr;
     text-align: left;
     align-items: center;
 }
 
 .cart-name {
-    grid-column: 1 / 3;
+    grid-column: 2 / 4;
 }
 
 .cart-qty {
-    grid-column: 3 / 4;
+    grid-column: 4 / 5;
 }
 
 .cart-price {
-    grid-column: 4 / 5;
+    grid-column: 5 / 6;
 }
 
 .total {
@@ -29,7 +29,7 @@
 
 .items {
     display: inline-block;
-    margin: 10px;
+    margin: 0px;
 }
 .cart-submit {
     margin: 10px;
@@ -54,4 +54,14 @@
 
 .empty-msg {
     margin: 10px;
+}
+
+.imgSmall {
+    width: 66px;
+    height: 100px;
+    grid-column: 1 / 2;
+}
+
+.cart-name {
+    margin-bottom: 0!important;
 }
