--- a/client/src/features/orders/orders.css
+++ b/client/src/features/orders/orders.css
@@ -5,23 +5,32 @@
 
 .list-item {
     display: grid;
-    grid-template-columns: 1fr 1fr 1fr 1fr;
+    grid-template-columns: 66px 1fr 1fr 1fr 1fr;
     text-align: left;
     align-items: center;
 }
 
 .list-main {
-    grid-column: 1 / 3;
+    grid-column: 2 / 4;
 }
 
 .list-1 {
-    grid-column: 3 / 4;
+    grid-column: 4 / 5;
 }
 
 .list-2 {
-    grid-column: 4 / 5;
+    grid-column: 5 / 6;
 }
 
 a :hover {
     background-color: lightblue;
+}
+.imgSmall {
+    width: 66px;
+    height: 100px;
+    grid-column: 1 / 2;
+}
+
+.list-main {
+    margin-bottom: 0!important;
 }
