--- a/client/src/index.css
+++ b/client/src/index.css
@@ -6,8 +6,11 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  background: rgb(97,223,245);
-  background: linear-gradient(90deg, rgba(97,223,245,1) 0%, rgba(0,212,255,1) 100%);
+  background: #ADA996;  /* fallback for old browsers */
+  background: -webkit-linear-gradient(to left, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996);  /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to left, #EAEAEA, #DBDBDB, #F2F2F2, #ADA996); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  
+  
 }
 
 code {
@@ -30,4 +33,5 @@ ul {
 
 main {
   padding-top: 4rem!important;
+  padding-bottom: 4rem!important;
 }
