--- a/client/src/features/orders/orders.css
+++ b/client/src/features/orders/orders.css
@@ -3,23 +3,42 @@
     margin: 0 auto;
 }
 
-.list-item {
+.cart-item {
     display: grid;
     grid-template-columns: 66px 1fr 1fr 1fr 1fr;
     text-align: left;
     align-items: center;
 }
 
-.list-main {
+.cart-name {
     grid-column: 2 / 4;
 }
 
-.list-1 {
+.cart-qty {
     grid-column: 4 / 5;
 }
 
-.list-2 {
+.cart-price {
     grid-column: 5 / 6;
+}
+
+.list-item {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;
+    text-align: left;
+    align-items: center;
+}
+
+.list-main {
+    grid-column: 1 / 3;
+}
+
+.list-1 {
+    grid-column: 3 / 4;
+}
+
+.list-2 {
+    grid-column: 4 / 5;
 }
 
 a :hover {
